bug fix, booking page config

--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -1,46 +1,64 @@
-<%= form_with(model: booking) do |form| %>
-<% if booking.errors.any? %>
-<div id="error_explanation" class="bg-red-50 p-6 rounded text-red-800">
-  <h2 class="text-lg font-semibold mb-3"><%= pluralize(booking.errors.count, "error") %> prohibited this booking from being saved:</h2>
+<%= form_with(model: booking, data: { turbo: false, action: "submit->payment#purchase", payment_target: "form"}) do |form| %>
+  <% if booking.errors.any? %>
+    <div id="error_explanation" class="bg-red-50 p-6 rounded text-red-800">
+      <h2 class="text-lg font-semibold mb-3"><%= pluralize(booking.errors.count, "error") %> prohibited this booking from being saved:</h2>
 
-  <ul class="list-disc leading-relaxed">
-    <% booking.errors.full_messages.each do |message| %>
-    <li><%= message %></li>
-    <% end %>
-  </ul>
-</div>
-<% end %>
+      <ul class="list-disc leading-relaxed">
+        <% booking.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
+
+  <h3 class="font-bold text-lg mb-3 mt-6">Personal details</h3>
+
+  <div class="grid grid-col-1 lg:grid-cols-2 gap-6 mb-10">
+    <div>
+      <%= form.label :name, class: label_class %>
+      <%= form.text_field :name, class: input_class, data: { payment_target: "name" } %>
+    </div>
+
+    <div>
+      <%= form.label :email, class: label_class %>
+      <%= form.text_field :email, class: input_class, data: { payment_target: "email" } %>
+    </div>
+  </div>
 
   <div class="mb-6">
-        <%= form.label :status, class: label_class %>
-          <%= form.number_field :status, class: input_class %>
-      </div>
-  <div class="mb-6">
-        <%= form.label :first_name, class: label_class %>
-          <%= form.text_field :first_name, class: input_class %>
-      </div>
-  <div class="mb-6">
-        <%= form.label :last_name, class: label_class %>
-          <%= form.text_field :last_name, class: input_class %>
-      </div>
-  <div class="mb-6">
-        <%= form.label :email, class: label_class %>
-          <%= form.text_field :email, class: input_class %>
-      </div>
-  <div class="mb-6">
-        <%= form.label :start_at, class: label_class %>
-          <%= form.datetime_field :start_at, class: input_class %>
-      </div>
-  <div class="mb-6">
-        <%= form.label :end_at, class: label_class %>
-          <%= form.datetime_field :end_at, class: input_class %>
-      </div>
+    <%= form.label :notes, class: label_class %>
+    <%= form.rich_text_area :notes, class: input_class %>
+  </div>
 
-<%= form.submit class: button_class(theme: 'primary') %>
+  <h3 class="font-bold text-lg mb-3">Booking details</h3>
 
-<% if booking.persisted? %>
-<%= link_to "Cancel", booking, class: "text-neutral-700 underline inline-block ml-3" %>
-<% else %>
-<%= link_to "Cancel", bookings_path, class:  "text-neutral-700 underline inline-block ml-3" %>
-<% end %>
+  <% if @booking.new_record? %>
+    <div class="mb-6">
+      <div class="rounded border-slate-300 border shadow-sm bg-white py-6 px-10 inline-block relative">
+        <%= form.label :booking_type_id, "Booking type", class: label_class %>
+        <input type="hidden" name="booking[booking_type_id]" value="<%= @booking_type.id %>">
+        <div class="flex items-start">
+          <div class="text-3xl font-bold mr-3"><%= params[:booking_type] %>
+            <div class="absolute top-3 right-3 w-3 h-3 rounded-full" style="background-color: <%= @booking_type.color %>;"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+  <% else %>
+    <%= @booking.booking_type.name %>
+  <% end %>
+
+  <div class="grid grid-cols-1 lg:grid-cols-2 gap-6 mb-10">
+    <div>
+      <%= form.label :start_at, class: label_class %>
+      <%= form.datetime_field :start_at, class: input_class, min: Date.today %>
+    </div>
+
+    <div>
+      <%= form.label :end_at, class: label_class %>
+      <%= form.datetime_field :end_at, class: input_class, min: Date.today %>
+    </div>
+  </div>
+
+  <%= form.submit @booking_type.payment_required? ? "Schedule booking for #{number_to_currency(@booking_type.price)}" : "Schedule booking", class: button_class(theme: 'primary'), data: { payment_target: "submit" } %>
 <% end %>
