--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,5 +1,11 @@
 <div class="max-w-3xl mx-auto px-4">
-  <h1 class="font-bold text-3xl mb-6">New booking</h1>
+
+  <% if @booking_type.payment_required? %>
+    <h1 class="font-bold text-3xl mb-6">Schedule your booking for <%= number_to_currency(@booking_type.price) %></h1>
+  <% else %>
+  <h1 class="font-bold text-3xl mb-6">Schedule your booking</h1>
+
+  <% end %>
 
   <%= render 'form', booking: @booking %>
 </div>
