--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,8 +7,8 @@
     </div>
 
     <div class="grid grid-cols-3 gap-6 px-8 pt-8">
-        <%= @user.booking_types.each do |booking_type| %>
-            <%= render "user/booking_type", booking_type: booking_type %>
+        <% @user.booking_types.each do |booking_type| %>
+            <%= render "users/booking_type", booking_type: booking_type %>
         <% end %>
     </div>
 </div>
